--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -148,6 +148,7 @@ a{
 /*/////////////////////////////////////////////////////////////*/
 /* BORDERS */
 /*/////////////////////////////////////////////////////////////*/
+.article,
 .navi nav.links,
 .section{
     border-color: #EFEFEF;
