--- a/v2/css/device.css
+++ b/v2/css/device.css
@@ -23,9 +23,6 @@
     #posts .post > div{
     align-items: center;
     }
-    #titlebar.sticky{
-        background-color: #FFF;
-    }
 /*/////////////////////////////////////////////////////////////*/
 }
     /*/////////////////////////////////////////////////////////////*/
@@ -102,7 +99,7 @@
     margin-right: -20px;
     }
     /*/////////////////////////////////////////////////////////////*/
-    #titlebar{
+    /*#titlebar{
     transition: background-color 0.6s, color 0.6s;
     }
     #titlebar.sticky div a,
@@ -111,7 +108,7 @@
     }
     #titlebar.sticky{
         background-color: #346672;
-    }
+    }*/
     /*/////////////////////////////////////////////////////////////*/
     }
     /*/////////////////////////////////////////////////////////////*/
