--- a/v2/css/casestudy.css
+++ b/v2/css/casestudy.css
@@ -1,3 +1,9 @@
+#intro .img.xs{
+    max-width: 100%;
+}
+.segment{
+    padding-bottom: 8px;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
 /*/////////////////////////////////////////////////////////////*/
@@ -49,344 +55,13 @@ padding: 40px;
 width: 440px;
 margin-bottom: 12px;
 }
-
-<!-- STYLE CSS-->
-<style>
-*, body{
-font-family: 'Raleway';
-padding: 0;
-margin: 0;
-border: 0;
-font-size: 18px;
-line-height: 160%;
-overflow: initial;
--webkit-font-smoothing: subpixel-antialiased !important;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* FONT SIZE */
-/*/////////////////////////////////////////////////////////////*/
-*, body, p, p b, h1, h2, h3, h4{
-    font-size: 10px;
-}
-@media only screen and (max-width: 424px) {
-*, body, p, b, h1, h2, h3, h4{
-font-size: 9.5px;
-}
-}
-h1, h2, h3, h3 a, p.l, p.l span{
-font-family: 'Lora';
-}
-#intro h2{
-font-family: 'Playfair Display';
-font-weight: 700;
-}
-#intro h2{ font-size: 4.2em; }
-h2 { font-size: 2em; }
-h1 { font-size: 1.8em; }
-#titlebar nav a, h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
-.segment h4, .navi nav a{ font-size: 1.3em; }
-h4 a, p.l span, p u, p a, li b{
-font-size: 1em;
-}
-.special ul li h3:before{
-    font-size: 0.68em;    
-} 
-a{
-text-decoration: none;
-}
-h1,h2,h3,h4{
-    font-weight: 400;
-}
-@media only screen and (max-width: 992px) {
-    p.l { font-size: 2.0em; line-height: 175%; }
-    #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
-    .special ul li p{ font-size: 1.4em; }
-}
-/*/////////////////////////////////////////////////////////////*/
-/* COLOR */
-/*/////////////////////////////////////////////////////////////*/
-.segment h4,
-#titlebar nav a,
-.navi a{
-opacity: 50%;    
-}
-#titlebar.sticky a h1, 
-#project ul p,
-.navi nav.selected a:first-of-type,
-.navi a.selected{
-opacity: 92%;    
-}
-a h1,
-.section p{
-opacity: 68%;
-}
-.special.v1 > p,
-.navi nav.selected a:first-of-type,
-.navi nav .selected,
-h1,h2,h3{
-opacity: 100%;
-}
-#titlebar div a,
-.navi a{
-color: #000;
-}
-#project ul span,
-.special ul li h3:before{
-color: #FFF;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* BACKGROUND */
-/*/////////////////////////////////////////////////////////////*/
-#titlebar .avatar,
-.navi .back,
-.section .img{
-background-color: #E9E9ED;
-}
-.special.v1{
-background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #88A4AA;
-}
-#project ul span,
-.special ul li h3:before{
-background: #88A4AA;
-}
-.special ul li{
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #E9E9ED;
-}
-.special.v1 ul li{
-    background: rgba(255, 255, 255, 0.68);
-}
-.img.v1{
-    background-color: #FFF;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* BORDERS */
-/*/////////////////////////////////////////////////////////////*/
-#titlebar .avatar{
-border-radius: 100px;
-}
-.section{
-    border-color: #D5D5D5;
-}
-</style>
-<!-- CORE CSS -->
-<style>
-/*/////////////////////////////////////////////////////////////*/
-/* MATERIAL ICONS */
-/*/////////////////////////////////////////////////////////////*/
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
-    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
-    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
-}
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Support for IE. */
-  font-feature-settings: 'liga';
-}
-/*/////////////////////////////////////////////////////////////*/
-/* ANIMATION */
-/*/////////////////////////////////////////////////////////////*/
-.fullscreen-div.loaded {
-    animation: fadeOut 0.6s ease-in-out forwards; /* Adjust the duration as needed */
-}
-.fullscreen-div.none {
-display: none;
-}
-@keyframes fadeOut {
-    0% {
-        opacity: 100%;
-    }
-    100% {
-        opacity: 0%;
-    }
-}
-.container {
-opacity: 1;
-transition: opacity 0.6s ease-out;
-}
-.navi nav a {  
-  opacity: 50%;
-  transition: opacity 0.6s ease-in-out;
-}
-.container.fade {
-opacity: 0;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* CORE */
-/*/////////////////////////////////////////////////////////////*/
-li{ list-style-position: inside;}
-nav a {  
-  font-weight: 400;
-  opacity: 50%;
-  transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
-}
-html, body {
-  scroll-behavior: smooth;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* LAYOUT */
-/*/////////////////////////////////////////////////////////////*/
-.container{
-display: flex;
-justify-content: center;
-gap: 0;
-padding: 104px 0 0 0;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* Splash */
-/*/////////////////////////////////////////////////////////////*/
-.fullscreen-div {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #346672;
-    position: fixed;
-    z-index: 1000;
-}
-.fullscreen-div img {
-    max-width: 100%;
-    max-height: 80vh; 
-}
-/*/////////////////////////////////////////////////////////////*/
-/* TITLEBAR */
-/*/////////////////////////////////////////////////////////////*/
-#titlebar{
-position: fixed;
-top: 0; 
-left: 0;
-right: 0;
-z-index: 100;
-}
-#titlebar > div{
-padding: 12px 0;
-max-width: 1012px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin: 0 auto;
-}
-#titlebar div a{
-display: flex;
-gap: 12px;
-align-items: center;
-}
-#titlebar .avatar{
-width: 30px;
-height: 30px;
-background-size: 100% auto;
-}
-#titlebar nav{
-    display: flex;
-    gap: 24px;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* NAVI */
-/*/////////////////////////////////////////////////////////////*/
-.navi{
-width: 244px;
-}
-.navi nav{
-    margin-bottom: 12px;
-}
-.navi nav a{
-    text-decoration: none;
-    margin-bottom: 4px;
-    padding: 0 0 0 12px;
-    display: none;
-}
-.navi nav a:first-of-type,
-.navi nav.selected a{
-    display: block;
-}
-.navi nav a:first-of-type{
-    padding-left: 0;
-    margin-bottom: 12px;
-}
-.navi .back{
-    margin-bottom: 12px;
-    border-radius: 100px;
-    display: inline-block;
-}
-.navi .back:hover{
-    text-decoration: none!important;
-}
-.navi .back .icn{
-    width: 36px;
-    font-size: 16px;
-    line-height: 36px;
-    text-align: center;
-    display: block;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* CONTENT */
-/*/////////////////////////////////////////////////////////////*/
-.body{
-    width: 768px;
-}
-.body h2{
-    margin-bottom: 12px;
-}
-.section{
-padding: 0 0 68px 0;
-margin: 0 0 68px 0;
-border-width: 0 0 1px 0;
-border-style: solid;
-}
-.segment{
-padding-bottom: 36px;
-}
-.section .segment:last-of-type{
-padding-bottom: 0!important;
-}
-.segment h3,
-.segment h4{
-margin-bottom: 8px;
-}
-.segment p{
-max-width: 668px;
-margin-bottom: 16px;
-}
-.segment p:only-of-type,
-.segment p:last-of-type{
-margin-bottom: 0;
-}
-/*/////////////////////////////////////////////////////////////*/
-/* SEGMENT */
 /*/////////////////////////////////////////////////////////////*/
 
 /* PROJECT */
 
 /*/////////////////////////////////////////////////////////////*/
 #project ul{
-    padding-top: 36px;
+    padding-top: 8px;
     list-style-type: none;
     display: flex;
     justify-content: space-between;
@@ -436,35 +111,6 @@ flex: 1;
     background-size: 100% auto;
 }
 /*/////////////////////////////////////////////////////////////*/
-
-/* GALLERY */
-
-/*/////////////////////////////////////////////////////////////*/
-.img{
-  position: relative;
-  width: 100%;
-  margin-bottom: 12px;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
-  display: block;
-  border-radius: 4px;
-}
-.img span,
-.img img {
-border: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-.img,
-.img span,
-.img img {
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-}
-/*/////////////////////////////////////////////////////////////*/
 .gallery-container {
   overflow-x: auto;
   white-space: nowrap;
@@ -492,6 +138,7 @@ border: 0;
     margin-bottom: 12px;
 }
 .special ul{
+    /*max-width: 100%;*/
     display: flex;
     gap: 16px;
 }
@@ -532,145 +179,49 @@ border: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 .special.v1{
+    max-width: 668px;
     padding: 24px;
     border-radius: 4px;
 }
-
-
 /*/////////////////////////////////////////////////////////////*/
-/* DESKTOP */
+/* >= SM TABLETS */
 /*/////////////////////////////////////////////////////////////*/
-@media only screen and (min-width: 993px) {
-    .navi.sticky{
-        height: 400px;
-        position: sticky;
-        top: 0; 
-        padding-top: 104px;
-    }
-    .special.v1 > p{
-        margin-bottom: 36px;
-    }
-    a:hover{
-    text-decoration: underline;
-    }
-    #overview > .img{
-        display: none;
-    }
-    #titlebar.sticky{
-        background-color: #FFF;
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    /* >= SM TABLETS */
-    /*/////////////////////////////////////////////////////////////*/
-    @media only screen and (min-width: 769px) {
-    .special ul li{
+ @media only screen and (min-width: 769px) {
+.special ul li{
     width: calc(50% - 50px); /* Adjust the width as needed */
-    }
-    .special.v2 ul li{
+}
+.special.v2 ul li{
     width: calc(33% - 50px); /* Adjust the width as needed */
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    /* TABLETS */
-    /*/////////////////////////////////////////////////////////////*/
-    @media only screen and (max-width: 992px) {
-    .navi nav{
-    display: none!important;
-    }
-    #titlebar{
-    padding: 0 40px;
-    }
-    .container{
-    padding: 104px 40px 40px 40px;
-    flex-direction: column;
-    }
-    .body{
-    width: 100%;
-    }
-    .navi .back{
-    background-color: #346672;
-    box-shadow: #000;
-    position: fixed;
-    bottom: 16px;
-    left: 16px; 
-    opacity: 88%;   
-    z-index: 100;
-    }
-    .navi .back .icn{
-    width: 48px;
-    height: 48px;
-    line-height: 48px;
-    font-size: 24px;
-    color: #FFF;
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    /* SM TABLETS */
-    /*/////////////////////////////////////////////////////////////*/
-    @media only screen and (max-width: 768px) {
-    .container{
-    padding: 68px 20px 68px 20px;
-    }
-    #titlebar{
-    padding: 0 20px;
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    #titlebar{
-    transition: background-color 0.6s, color 0.6s;
-    }
-    #titlebar.sticky div a,
-    #titlebar.sticky nav a{
-    color: #FFF;
-    }
-    #titlebar.sticky{
-    background-color: #346672;
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    /* MOBILES */
-    /*/////////////////////////////////////////////////////////////*/
-    @media only screen and (max-width: 576px) {
-    .section{
-    padding: 0 0 36px 0;
-    margin: 0 0 36px 0;
-    }
-    .segment{
-    padding-bottom: 24px;
-    }
-    #project ul,
-    .special ul,
-    #pain-points ol{
+}
+/*/////////////////////////////////////////////////////////////*/
+}
+/*/////////////////////////////////////////////////////////////*/
+/* MOBILES */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (max-width: 576px) {
+#project ul,
+.special ul,
+#pain-points ol{
     flex-direction: column;
     gap: 12px;
-    }
-    #pain-points ol{
-        gap: 20px;
-    }
-    #titlebar h1{
-    display: none;
-    }
-    #titlebar.sticky h1{
-    display: block;
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    .special ul{
+}
+#pain-points ol{
+     gap: 20px;
+}
+/*/////////////////////////////////////////////////////////////*/
+.special ul{
     gap: 0;
-    }
-    .special ul li{
+}
+.special ul li{
     padding: 12px;
     margin-bottom: 12px;
-    }
-    .special ul li:last-of-type{
+}
+.special ul li:last-of-type{
     margin-bottom: 0;
-    }
-    .special.v1{
+}
+.special.v1{
     padding: 16px;
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    }
-    /*/////////////////////////////////////////////////////////////*
+}
+/*/////////////////////////////////////////////////////////////*/
+}
+/*/////////////////////////////////////////////////////////////*
