--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -28,110 +28,52 @@ h1, h2, h3, h3 a, p.l, p.l span{
     text-rendering: optimizeLegibility;
 }
 }
-#intro h2{ font-size: 4.2em; letter-spacing: -0.5pt; }
+#intro h2{ font-size: 4.2rem; letter-spacing: -0.5pt; }
 h1,h2, h3,h4{
     line-height: 140%; 
 }
 h1{ font-weight: 400; }
-h3 { font-size: 2.2em; line-height: 175%; }
-p.l { font-size: 2em; line-height: 175%; }
-.article h3 { font-size: 2em; line-height: 160%; }
-    h2, h1{ font-size: 1.8em; line-height: 160%; }
-    ul li, ol li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
-    #skills ul li, .article p, h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
-    #showcase h3 a > span,
-    h3 a, 
-    p.l span, 
-    p u, 
-    p a, 
-    ol li a,
-    li b{
+h3 { font-size: 2.2rem; line-height: 175%; }
+p.l { font-size: 2rem; line-height: 175%; }
+.article h3 { font-size: 2rem; line-height: 160%; }
+h2, h1{ font-size: 1.8rem; line-height: 160%; }
+ul li, ol li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6rem; }
+#skills ul li, .article p, h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3rem; }
+#showcase h3 a > span,
+h3 a, 
+p.l span, 
+p b,
+p u, 
+p a, 
+ol li a,
+li b{
     font-size: 1em;
-    }
-    #showcase h3 a > span,
-    .special ul li h3:before{
-        font-size: 0.68em;    
-    } 
-    @media only screen and (max-width: 992px) {
-        p.l { font-size: 2.0em; line-height: 175%; }
-        #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
-        #posts p{ font-size: 1.5em; }
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    h1, h3,h4,.navi nav a {  
-      font-weight: 400;
-    }
+}
+#showcase h3 a > span,
+.special ul li h3:before{
+    font-size: 0.68em;    
+} 
+@media only screen and (max-width: 992px) {
+    p.l { font-size: 2.0em; line-height: 175%; }
+    #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
+    #posts p{ font-size: 1.5em; }
+}
+/*/////////////////////////////////////////////////////////////*/
+.navi nav.selected a:first-of-type{
+    font-weight: 700;
+}
+h1, h3,h4,.navi nav a {  
+    font-weight: 400;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
-.section h4,
-#posts p,
-#titlebar nav a,
-.navi a{
-    color: rgba(0, 0, 0, 0.5);   
-}
-#titlebar.sticky a h1, 
-#posts nav a:hover,
-h3 a,
-.navi nav.selected a:first-of-type,
-.navi a.selected{
-    color: rgba(0, 0, 0, 0.92);   
-}
-a h1,
-#posts nav a,
-.section p{
-    color: rgba(0, 0, 0, 0.68);
-}
-@media only screen and (max-width: 992px) {
-    .navi nav.links{ color rgba(0, 0, 0, 0.92);  }
-}
-/*/////////////////////////////////////////////////////////////*/
-#titlebar div a,
-h3 a,
-nav a{
-    color: #000;
-}
-#skills ul li,
-.header,
-#project ul span,
-.special ul li h3:before{
-    color: #FFF;
-}
-.icn{
-    color: #346672;
-}
 a{
     color: #4a90e2;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
 /*/////////////////////////////////////////////////////////////*/
-.navi .back,
-.section .img{
-    background-color: #E9E9ED;
-}
-#titlebar .avatar,
-#posts nav a.selected,
-#showcase h3 a > span{
-    background: #E3E9F0    
-}
-.special.v1{
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.68) 100%), #88A4AA;
-}
-#skills ul li,
-#project ul span,
-.special ul li h3:before{
-    background: #88A4AA;
-}
-.special ul li{
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #E9E9ED;
- }
-.special.v1 ul li{
-    background: rgba(255, 255, 255, 0.68);
-}
-.img.v1{
-    background-color: #FFF;
-}
 .fullscreen-div {
     background-color: rgba(52, 102, 114, 0.96);   
     /*background-color: #346672;*/
@@ -145,17 +87,6 @@ a{
     background-repeat: no-repeat;
     background-size: auto 100%;
   }
-/*/////////////////////////////////////////////////////////////*/
-/* BORDERS */
-/*/////////////////////////////////////////////////////////////*/
-.article,
-.navi nav.links,
-.section{
-    border-color: #EFEFEF;
-}
- #posts nav a{
-    border-color: #E3E9F0;
- }
 /*/////////////////////////////////////////////////////////////*/
     #showcase .scrollable,
     .img,
@@ -181,3 +112,178 @@ a{
 .img.sm{
     padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
 }
+.img.xs{
+    padding-bottom: 30%; /* 16:9 aspect ratio (9 / 16 * 100) */
+}
+/*/////////////////////////////////////////////////////////////*/
+
+/* LIGHT */
+
+/*/////////////////////////////////////////////////////////////*/
+/* COLOR */
+/*/////////////////////////////////////////////////////////////*/
+.section h4,
+#posts p,
+#titlebar nav a,
+.navi a{
+    color: rgba(0, 0, 0, 0.5);   
+}
+#titlebar.sticky a h1, 
+#posts nav a:hover,
+h3 a,
+.navi nav.selected a{
+    color: rgba(0, 0, 0, 0.92);   
+}
+.navi nav.selected a{
+    color: rgba(0, 0, 0, 1.0);   
+}
+a h1,
+#posts nav a,
+.section ul li,
+.section p{
+    color: rgba(0, 0, 0, 0.68);
+}
+@media only screen and (max-width: 992px) {
+    .navi nav.links{ color rgba(0, 0, 0, 0.92);  }
+}
+/*/////////////////////////////////////////////////////////////*/
+#titlebar div a,
+h3 a,
+nav a{
+    color: #000;
+}
+#skills ul li,
+.header,
+#project ul span,
+.special ul li h3:before{
+    color: #FFF;
+}
+.icn{
+    color: #346672;
+}
+/*/////////////////////////////////////////////////////////////*/
+/* BORDERS */
+/*/////////////////////////////////////////////////////////////*/
+.article,
+.navi nav.links,
+.section{
+    border-color: #EFEFEF;
+}
+ #posts nav a{
+    border-color: #E3E9F0;
+ }
+ /*/////////////////////////////////////////////////////////////*/
+/* BACKGROUND */
+/*/////////////////////////////////////////////////////////////*/
+.navi .back,
+.section .img{
+    background-color: #E9E9ED;
+}
+#titlebar .avatar,
+#posts nav a.selected,
+#showcase h3 a > span{
+    background: #E3E9F0    
+}
+.special ul li{
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #E9E9ED;
+ }
+.special.v1 ul li{
+    background: rgba(0, 0, 0, 0.68);
+}
+#titlebar.sticky,
+.img.v1{
+    background-color: #FFF;
+}
+/*/////////////////////////////////////////////////////////////*/
+.page-index #intro .img{
+background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar3.png);
+}
+/*/////////////////////////////////////////////////////////////*/
+
+/* DARK */
+
+/*/////////////////////////////////////////////////////////////*/
+/* COLOR */
+/*/////////////////////////////////////////////////////////////*/
+.dark-mode .section h4,
+.dark-mode #posts p,
+.dark-mode #titlebar nav a,
+.dark-mode .navi a{
+    color: rgba(255, 255, 255, 0.5);   
+}
+.dark-mode #titlebar.sticky a h1, 
+.dark-mode #posts nav a:hover,
+.dark-mode h3 a,
+.dark-mode .navi nav.selected a{
+    color: rgba(255, 255, 255, 0.92);   
+}
+.dark-mode .navi nav.selected a{
+    color: rgba(255, 255, 255, 1.0);   
+}
+.dark-mode a h1,
+.dark-mode #posts nav a,
+.dark-mode .section ul li,
+.dark-mode .section p{
+    color: rgba(0255, 255, 255, 0.68);
+}
+@media only screen and (max-width: 992px) {
+    .dark-mode .navi nav.links{ color rgba(255, 255, 255, 0.92);  }
+}
+/*/////////////////////////////////////////////////////////////*/
+.dark-mode,
+.dark-mode #titlebar div a,
+.dark-mode h3 a,
+.dark-mode nav a{
+    color: #FFF;
+}
+.dark-mode #skills ul li,
+.dark-mode .header,
+.dark-mode #project ul span,
+.dark-mode .special ul li h3:before{
+    color: #000;
+}
+.dark-mode .icn{
+    color: #346672;
+}
+/*/////////////////////////////////////////////////////////////*/
+/* BORDERS */
+/*/////////////////////////////////////////////////////////////*/
+.dark-mode .article,
+.dark-mode .navi nav.links,
+.dark-mode .section{
+    border-color: #666;
+}
+ #posts nav a{
+    border-color: #666;
+ }
+ /*/////////////////////////////////////////////////////////////*/
+/* BACKGROUND */
+/*/////////////////////////////////////////////////////////////*/
+.dark-mode #titlebar.sticky{
+    background-color: #222;
+}
+.dark-mode{
+    background-color: #2D2D2D;
+}
+.dark-mode .navi .back,
+.dark-mode .section .img{
+    background-color: #666;
+}
+.dark-mode #titlebar .avatar,
+.dark-mode #posts nav a.selected,
+.dark-mode #showcase h3 a > span{
+    background: #666;    
+}
+.dark-mode .special ul li{
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #E9E9ED;
+ }
+ .dark-mode .special.v1 ul li{
+    background: rgba(255, 255, 255, 0.68);
+}
+.dark-mode .img.v1{
+    background-color: #666;
+}
+/*/////////////////////////////////////////////////////////////*/
+.page-index #intro .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar4.png);
+    }
