--- a/v2/css/device.css
+++ b/v2/css/device.css
@@ -25,18 +25,21 @@
     }
 /*/////////////////////////////////////////////////////////////*/
 }
-    /*/////////////////////////////////////////////////////////////*/
-    /* >= SM TABLETS */
-    /*/////////////////////////////////////////////////////////////*/
-    @media only screen and (min-width: 769px) {
-    .special ul li{
+/*/////////////////////////////////////////////////////////////*/
+/* >= SM TABLETS */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (min-width: 769px) {
+.special ul li{
     width: calc(50% - 50px); /* Adjust the width as needed */
-    }
-    .special.v2 ul li{
+ }
+.special.v2 ul li{
     width: calc(33% - 50px); /* Adjust the width as needed */
-    }
-    /*/////////////////////////////////////////////////////////////*/
-    }
+}
+#design-journal{
+    border: 0;
+}
+/*/////////////////////////////////////////////////////////////*/
+}
     /*/////////////////////////////////////////////////////////////*/
     /* TABLETS */
     /*/////////////////////////////////////////////////////////////*/
