--- a/v2/css/device.css
+++ b/v2/css/device.css
@@ -1,4 +1,20 @@
 /*/////////////////////////////////////////////////////////////*/
+/* LARGE DESKTOP */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (min-width: 1400px) {
+/*/////////////////////////////////////////////////////////////*/
+.container{
+    display: flex;
+    padding: 104px 144px 0 96px;
+}
+#titlebar > div{
+    padding: 12px 144px 12px 96px;
+}
+.container{
+    gap: 96px;
+}
+}
+/*/////////////////////////////////////////////////////////////*/
 /* DESKTOP */
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (min-width: 993px) {
@@ -13,9 +29,10 @@
         top: 0; 
         padding-top: 104px;
     }
+    #intro,
     .container{
         flex-direction: row-reverse;
-        gap: 96px;
+        gap: 40px;
     }
     .navi{
         width: 148px;
@@ -35,15 +52,39 @@
 .special.v2 ul li{
     width: calc(33% - 50px); /* Adjust the width as needed */
 }
+/*/////////////////////////////////////////////////////////////*/
 #design-journal{
     border: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
+.column-container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-    /*/////////////////////////////////////////////////////////////*/
-    /* TABLETS */
-    /*/////////////////////////////////////////////////////////////*/
-    @media only screen and (max-width: 992px) {
+.column{
+    flex: 0 1 calc(50% - 20px); /* Adjust width and margin as needed */
+    display: flex;
+    flex-direction: column;
+}
+.col1 .column:nth-child(1){
+    flex: 0 1 calc(66% - 20px); /* Adjust width and margin as needed */
+}
+.col1 .column:nth-child(2){
+    flex: 0 1 calc(33% - 20px); /* Adjust width and margin as needed */
+}
+.col2 .column{
+    flex: 0 1 calc(50% - 20px); /* Adjust width and margin as needed */
+}
+.col3 .column {
+    flex: 0 1 calc(33.33% - 20px); /* Adjust width and margin as needed */
+}
+/*/////////////////////////////////////////////////////////////*/
+}
+/*/////////////////////////////////////////////////////////////*/
+/* TABLETS */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (max-width: 1024px) {
     /*/////////////////////////////////////////////////////////////*/
     .navi nav#nav1,
     .navi nav#nav2,
@@ -57,11 +98,7 @@
     margin-bottom: 12px;
     padding: 0;
     }
-    #titlebar{
-    padding: 0 40px;
-    }
     .container{
-    padding: 40px;
     flex-direction: column;
     }
     .body{
@@ -93,13 +130,20 @@
     /*/////////////////////////////////////////////////////////////*/
     @media only screen and (max-width: 768px) {
     .container{
-    padding: 104px 20px 68px 20px;
+    padding: 76px 20px 68px 20px;
     }
-    #titlebar{
-    padding: 0 20px;
+    #titlebar > div{
+    padding: 12px 20px;
     }
     #posts{
     margin-right: -20px;
+    }
+    #intro h2{
+        margin-bottom: 24px;
+    }
+    ol li{
+        margin-left: 12px;
+        padding-left: 12px;
     }
     /*/////////////////////////////////////////////////////////////*/
     /*#titlebar{
@@ -118,15 +162,18 @@
     /* MOBILES */
     /*/////////////////////////////////////////////////////////////*/
     @media only screen and (max-width: 576px) {
-    .container{
+    /*.container{
     padding-top: 62%;
     position: relative;
-    }
+    }*/
     #titlebar h1{
     display: none;
     }
     #titlebar.sticky h1{
     display: block;
+    }
+    #titlebar.sticky nav a:last-of-type{
+       display: none; 
     }
     /*/////////////////////////////////////////////////////////////*/
     .section{
@@ -144,7 +191,7 @@
     gap: 12px;
     }
     /*/////////////////////////////////////////////////////////////*/
-    #intro{
+    /*#intro{
     padding-top: 24px;
     }
     #intro .img{
@@ -158,7 +205,7 @@
     top: 0;
     left: 0;
     right: 0;
-    }
+    }*/
     /*/////////////////////////////////////////////////////////////*/
     #showcase .segment{
         margin-bottom: 24px;
