--- a/v2/css/device.css
+++ b/v2/css/device.css
@@ -67,12 +67,15 @@
     display: flex;
     flex-direction: column;
 }
-.col1 .column:nth-child(1){
+.col4 .column:last-child,
+.col1 .column:first-child{
     flex: 0 1 calc(66% - 20px); /* Adjust width and margin as needed */
 }
-.col1 .column:nth-child(2){
+.col4 .column,
+.col1 .column{
     flex: 0 1 calc(33% - 20px); /* Adjust width and margin as needed */
 }
+
 .col2 .column{
     flex: 0 1 calc(50% - 20px); /* Adjust width and margin as needed */
 }
