--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -11,9 +11,11 @@
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
-h1, h2, h3, h3 a, p.l, p.l span{
+h1, h2, h3 a{
     font-family: 'Lora';
 }
+p.l, p.l span,
+h3,
 #intro h2{
     /*font-family: 'Playfair Display';*/
     font-family: 'Merriweather';
@@ -33,8 +35,8 @@ h1,h2, h3,h4{
     line-height: 140%; 
 }
 h1{ font-weight: 400; }
-h3 { font-size: 2.2rem; line-height: 175%; }
-p.l { font-size: 2rem; line-height: 175%; }
+h3 { font-size: 2.4rem; line-height: 175%; letter-spacing: -0.25pt; }
+.post h3, p.l { font-size: 2rem; line-height: 175%; }
 .article h3 { font-size: 2rem; line-height: 160%; }
 h2, h1{ font-size: 1.8rem; line-height: 160%; }
 ul li, ol li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6rem; }
