--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -40,7 +40,7 @@ h3 { font-size: 2.4rem; line-height: 175%; letter-spacing: -0.25pt; }
 .article h3 { font-size: 2rem; line-height: 160%; }
 h2, h1{ font-size: 1.8rem; line-height: 160%; }
 ul li, ol li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6rem; }
-#skills ul li, .article p, h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3rem; }
+#skills ul li, .post p, .article p, h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3rem; }
 #showcase h3 a > span,
 h3 a, 
 p.l span, 
@@ -101,6 +101,42 @@ background-color: #89A6AE;
     background-repeat: no-repeat;
     background-size: auto 100%;
   }
+#posts1 .post:nth-child(1) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts1 .post:nth-child(2) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts1 .post:nth-child(3) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts2 .post:nth-child(1) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts2 .post:nth-child(2) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts2 .post:nth-child(3) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts3 .post:nth-child(1) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts3 .post:nth-child(2) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts3 .post:nth-child(3) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts4 .post:nth-child(1) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts4 .post:nth-child(2) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
+#posts4 .post:nth-child(3) .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);
+} 
 /*/////////////////////////////////////////////////////////////*/
     #showcase .scrollable,
     .img,
