--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -333,6 +333,9 @@ nav a{
 .page-asurion #intro .img{
     background-image: url(https://peteroper.github.io/portfolio/assets/imgs/asurion-light.png);
 }   
+.page-hobbies #intro .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/hobbies-light.png);
+}   
 /*/////////////////////////////////////////////////////////////*/
 
 /* DARK */
@@ -425,3 +428,6 @@ nav a{
 .dark-mode .page-asurion #intro .img{
     background-image: url(https://peteroper.github.io/portfolio/assets/imgs/asurion-dark.png);
 }   
+.dark-mode .page-hobbies #intro .img{
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/hobbies-dark.png);
+} 
