--- a/v2/css/casestudy.css
+++ b/v2/css/casestudy.css
@@ -99,7 +99,9 @@ flex: 1;
     gap: 24px;
 }
 #pain-points ol li{
-flex: 1;
+    padding: 0;
+    margin: 0;
+    flex: 1;
 }
 /*/////////////////////////////////////////////////////////////*/
 
@@ -143,13 +145,14 @@ flex: 1;
     gap: 16px;
 }
 .special ul{
+margin-bottom: 0!important;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: space-between;
 }
 .special ul li{
-  margin-bottom: 16px; /* Adjust the margin as needed */
+  margin-bottom: 4px; /* Adjust the margin as needed */
   padding: 20px;
   border-radius: 4px;
   list-style-type: none;
