--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -142,7 +142,7 @@ background-color: #89A6AE;
 #design-dev.article .img{
     background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post2_2.png);
 }
-#userflow.article .img{
+#user-flow.article .img{
     background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post4_1.png);
 }
 #design-system.article .img{
