--- a/v2/css/index.css
+++ b/v2/css/index.css
@@ -18,3 +18,22 @@
     border-radius: 5px;
     margin-right: 10px;
 }
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (max-width: 576px) {
+/*/////////////////////////////////////////////////////////////*/
+.page-index #intro{
+    padding: 76px 20px 20px 20px;
+    margin: -76px -20px 20px -20px;
+    background-color: #346672;   
+    color: #FFF;
+}
+#titlebar div a,
+.page-index #intro p{
+    color: #FFF!important;
+}
+.page-index #intro .img{
+     padding-bottom: 68%;;
+    background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png)!important;
+}
+/*/////////////////////////////////////////////////////////////*/
+}
