--- a/v2/css/device.css
+++ b/v2/css/device.css
@@ -193,6 +193,15 @@ align-items: center;
     padding-top: 62%;
     position: relative;
     }*/
+    .container{
+    padding: 76px 12px 68px 12px;
+    }
+    #titlebar > div{
+    padding: 12px 12px;
+    }
+    #posts{
+    margin-right: -12px;
+    }
     #titlebar h1{
     display: none;
     }
