--- a/v2/css/index.css
+++ b/v2/css/index.css
@@ -24,15 +24,18 @@
 .page-index #intro{
     padding: 76px 12px 20px 12px;
     margin: -76px -12px 20px -12px;
-    background-color: #346672;   
-    color: #FFF;
 }
+.page-index #intro,
+#titlebar.sticky{
+    background-color: #346672!important; 
+}
+.page-index #intro,
 #titlebar div a,
 .page-index #intro p{
     color: #FFF!important;
 }
 .page-index #intro .img{
-     padding-bottom: 68%;;
+     padding-bottom: 68%;
     background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png)!important;
 }
 /*/////////////////////////////////////////////////////////////*/
