--- a/v2/css/index.css
+++ b/v2/css/index.css
@@ -29,6 +29,7 @@
 #titlebar.sticky{
     background-color: #346672!important; 
 }
+#titlebar div a,
 .page-index #intro,
 #titlebar div a,
 .page-index #intro p{
