--- a/v2/css/css.css
+++ b/v2/css/css.css
@@ -210,7 +210,7 @@ margin-bottom: 8px;
 max-width: 668px;
 margin-bottom: 16px;
 }
-.section li{
+.section ul li{
     margin-bottom: 8px;
 }
 #intro h2{
