--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -11,7 +11,7 @@
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
-h1, h2, h3 a{
+h1, h2, h3 a, h5{
     font-family: 'Lora';
 }
 p b,
@@ -27,20 +27,19 @@ h3,
         font-size: 10px;
 }
 @media only screen and (max-width: 424px) {
-*, body, p, b, h1, h2, h3, h4{
+*, body, p, b, h1, h2, h3, h4, h5{
     font-size: 9.5px;
     text-rendering: optimizeLegibility;
 }
 }
-
 h1,h2, h3,h4{
     line-height: 140%; 
 }
 /*/////////////////////////////////////////////////////////////*/
 #intro h2{ font-size: 4.2rem; letter-spacing: -0.5pt; }
 h3 { font-size: 2.4rem; line-height: 175%; letter-spacing: -0.25pt; }
-.post h3, .article h3 { font-size: 2.2rem; line-height: 160%; }
 p.l { font-size: 2rem; line-height: 175%; }
+h5 { font-size: 2.2rem; line-height: 160%; }
 .post h3, .article h3 { font-size: 2rem; line-height: 160%; }
 h2, h1{ font-size: 1.8rem; line-height: 160%; }
 ul li, ol li, #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6rem; }
