--- a/ebisu/assets/css/styles.css
+++ b/ebisu/assets/css/styles.css
@@ -302,6 +302,11 @@ header{
        gap: 1.5rem;
     }
 }
+@media (max-width: 728px) {
+    footer .flex{
+       gap: 0.5rem;
+    }
+}
 /*//////////////////////////////////////////////////*/
 /* FONT */
 /*//////////////////////////////////////////////////*/
