--- a/ebisu/assets/css/core.css
+++ b/ebisu/assets/css/core.css
@@ -102,6 +102,11 @@ header{
     display: flex;
     justify-content: space-between;
     /*align-items: center;*/
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 header .logo{
     width: 200px;
