--- a/ebisu/assets/css/core.css
+++ b/ebisu/assets/css/core.css
@@ -227,6 +227,12 @@ footer .col:last-of-type{
 footer .img{
     float: right;
 }
+/*/////////////////////////*/
+@media (max-width: 768px) {
+    footer .img{
+        display: none;
+    }
+}
 /*//////////////////////////////////////////////////*/
 /* BENEFITS */
 /*//////////////////////////////////////////////////*/
