--- a/ebisu/assets/css/core.css
+++ b/ebisu/assets/css/core.css
@@ -90,6 +90,14 @@ header,
 #lang.button:hover{
     transform: none;
 }
+/*//////////////////////////////////////////////////*/
+/* LINE BREAKS */
+/*//////////////////////////////////////////////////*/
+@media (max-width: 1024px) {
+.dt-set{
+    display: none;
+}
+}
 /*////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
 /* SECTIONS */
