--- a/boselecta/assets/css/styles.css
+++ b/boselecta/assets/css/styles.css
@@ -124,15 +124,14 @@ body:before {
 .bg-casestudy2{
     /*background-color:#362F46;*/
     /*background: linear-gradient(to right, #362F46, #703598, #69A5B3, #3F2070);*/
-    background: linear-gradient(to right, 
+   /* background: linear-gradient(to right, 
     rgba(54, 47, 70, 1), 
     rgba(112, 53, 152, 1), 
     rgba(105, 165, 179, 1), 
     rgba(63, 32, 112, 1)
-  );
+  );*/
 }
 .bg-casestudy3{
-    background-color: #FC0;
 }
 .bg-casestudy4{
     /*background: linear-gradient(to right, #EB5505, #FF5D86, #FF7147, #9786FE);*/
@@ -142,7 +141,6 @@ body:before {
     rgba(255, 113, 71, 0.5), 
     rgba(151, 134, 254, 0.5)
   );*/
-  background-color: #D23F3F;
 }
 /*/////////////////////////*/
 .button.outline{
@@ -381,11 +379,9 @@ small{
     background-repeat: no-repeat;
 }
 /*//////////////////////////////////////////////////*/
-.bg-casestudy1 body:before,
 #casestudy1 .img{
     background-image: url(../img/showcase2.png);
 }
-.bg-casestudy2 body:before,
 #casestudy2 .img{
     background-image: url(../img/showcase3.png);
 }
