--- a/boselecta/assets/css/styles.css
+++ b/boselecta/assets/css/styles.css
@@ -206,9 +206,7 @@ header .language a,
 }
 /*/////////////////////////*/
 @media (max-width: 1024px) {
-    header .primary{
-        padding: 1.5rem;
-    }
+
 }
 @media (max-width: 768px) {
 
@@ -346,8 +344,11 @@ small{
 /*/////////////////////////*/
 @media (max-width: 1024px) {
     h2,h3{
-    font-size: 2.25rem;
-}
+        font-size: 2.25rem;
+    }
+    #intro p{
+        font-size: 1.25rem;
+    }
 }
 /*//////////////////////////////////////////////////*/
 /* IMAGES */
